--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <%= link_to image_tag("/images/coruja.png", border: 0, width: "45px", height: "35px", alt: "Sala de Situação", padding: 0, margin: 0 ), root_path , class: 'navbar-brand' %>
+      <%= link_to image_tag("/images/coruja.png", border: 0, width: "40px", height: "35px", alt: "Sala de Situação", padding: 0, margin: 0 ), root_path , class: 'navbar-brand' , id: "something" %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active" id="inicio">
-            <%= link_to "Inicio", root_path , class: "nav-link" %>
+            <%= link_to "Inicio", root_path , class: "nav-link" , id: "something" %>
           </li>
            <% if adm_signed_in? %>
             <li class="nav-item">
@@ -32,7 +32,7 @@
           <% end %>
 
           <li class="nav-item" id="sobre">
-            <a class="nav-link" href="https://fs.unb.br/saladesituacao/">Sobre</a>
+            <a class="nav-link" href="https://fs.unb.br/saladesituacao/" target='_blank'>Sobre</a>
           </li>
 
           <li class="nav-item dropdown" id="sala">
@@ -40,14 +40,14 @@
               Produtos da sala de situação
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/boletim-epidemiologico">Boletim Epidemiológico</a>
-              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/boletim-entomologico">Boletim Entomológico</a>
-              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/boletim-monitoramento">Boletim Monitoramento</a>
-              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/clipping-de-noticias">Clipping de Notícias</a>
-              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/clipping-de-rumoresdeteccao">Clipping de Rumores/Detecção</a>
-              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/relatorios">Relatórios</a>
+              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/boletim-epidemiologico" target='_blank'>Boletim Epidemiológico</a>
+              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/boletim-entomologico" target='_blank'>Boletim Entomológico</a>
+              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/boletim-monitoramento" target='_blank'>Boletim Monitoramento</a>
+              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/clipping-de-noticias" target='_blank'>Clipping de Notícias</a>
+              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/clipping-de-rumoresdeteccao" target='_blank'>Clipping de Rumores/Detecção</a>
+              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/relatorios" target='_blank'>Relatórios</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/">Sala de Situação de Saúde</a>
+              <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/" target='_blank'>Sala de Situação de Saúde</a>
             </div>
           </li>
         </ul>
